# sq_browse

./: .gitignore  pyproject.toml  setup.py
sq_browse/: browser.py  cmd.py  errors.py  html_utils.py  plugins.py  postprocessing.py  structs.py
sq_browse/tests/: test_table_processor.py
